# diploma

./: README.md  pyproject.toml
config/: settings.py  urls.py
price/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
price/migrations/: 0001_initial.py  0002_initial.py  0003_alter_price_taxes.py  0004_alter_price_bank_taxes_alter_price_self_profit_and_more.py  0005_alter_price_bank_taxes_alter_price_self_profit_and_more.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
